# siftarr

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_PLAN.md  LICENSE  PLAN.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  repo-map.md  ruff.toml  ty.toml
.github/workflows/: ci.yml  deploy.yml
.opencode/plans/: dashboard-sort-filter-approve-deny.md
alembic/: env.py
alembic/versions/: 2026_04_05_1556-bc9c8cfbe08b_initial_migration_create_all_tables.py
app/arbitratarr/: __init__.py  config.py  database.py  main.py  version.py
app/arbitratarr/models/: __init__.py  pending_queue.py  release.py  request.py  rule.py  settings.py  staged_torrent.py
app/arbitratarr/routers/: dashboard.py  rules.py  settings.py  staged.py  webhooks.py
app/arbitratarr/services/: connection_tester.py  lifecycle_service.py  movie_decision_service.py  overseerr_service.py  pending_queue_service.py  prowlarr_service.py  qbittorrent_service.py  release_selection_service.py  rule_engine.py  rule_service.py  runtime_settings.py  scheduler_service.py  staging_decision_logger.py  staging_service.py  tv_decision_service.py
app/arbitratarr/templates/: base.html  dashboard.html  rule_form.html  rules.html  settings.html
app/siftarr/: README.md  __init__.py  config.py  database.py  main.py  repair_request_state.py  version.py
app/siftarr/models/: README.md  __init__.py  _base.py  activity_log.py  episode.py  pending_queue.py  plex_scan_state.py  release.py  request.py  rule.py  season.py  settings.py  staged_torrent.py
app/siftarr/routers/: README.md  dashboard.py  dashboard_actions.py  dashboard_api.py  rules.py  settings.py  staged.py  webhooks.py
app/siftarr/services/: README.md  activity_log_service.py  async_utils.py  background_tasks.py  connection_tester.py  dashboard_service.py  download_completion_service.py  episode_sync_service.py  http_client.py  lifecycle_service.py  media_helpers.py  movie_decision_service.py  overseerr_service.py  pending_queue_service.py  plex_polling_service.py  (+23 more)
db/: alembic.ini
db/alembic/: env.py
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  rebuild-run-logs.sh
docs/: CONTRIBUTING.md  README.md  SPEC.md
icons/brand/: README.md
tests/: README.md  __init__.py  test_activity_log_service.py  test_alembic_tv_pack_migrations.py  test_config.py  test_connection_tester.py  test_dashboard_router.py  test_database.py  test_download_completion_service.py  test_download_detection.py  test_episode_sync_service.py  test_lifecycle_service.py  test_mark_available.py  test_movie_decision_service.py  test_overseerr_service.py  test_pending_queue_service.py  test_plex_polling_service.py  test_plex_scan_state_service.py  test_plex_service.py  test_prowlarr_service.py  test_qbittorrent_service.py  test_recheck_endpoint.py  test_release_parser.py  test_release_selection_service.py  test_release_serializers.py  test_release_status_service.py  test_request_service.py  test_request_state_repair.py  test_rule_engine.py  test_rule_service.py  test_rules_router.py  test_runtime_settings.py  test_scheduler_service.py  test_scheduler_unreleased.py  test_settings_router.py  test_staged_router.py  test_staging_decision_logger.py  test_staging_service.py  test_timeline_api.py  test_torrent_service.py  (+5 more)
tests/routers/: __init__.py
(+95 files in other folders)
